fix page overflow and paragraph padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,12 @@
 
 /*General Styles*/
 body {
-background-color: rgb(206 206 206);
+    background-color: rgb(206 206 206);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     font-family: 'Roboto Slab', serif;
+    overflow-x: hidden;
 }
 
 h1,
@@ -14,6 +15,14 @@ h2,
 h3 {
     font-family: 'Roboto Condensed',
         sans-serif;
+}
+
+p {
+
+    padding: 2em 2em 0 2em;
+    text-align: justify;
+    line-height: 1.7em;
+
 }
 
 /*Header*/
@@ -29,7 +38,7 @@ header {
 }
 
 header a {
-    color:rgb(206 206 206);
+    color: rgb(206 206 206);
     text-decoration: none;
 }
 
@@ -98,12 +107,13 @@ nav {
     text-align: center;
     padding: 34% 8% 120% 3%;
 }
-                                #cover-text>h2 {
-                                    font-size: initial;
-                                    padding: 5% 1% 5% 1%;
-                                    background-color: rgba(0, 0, 0, 0.5);
-                                    color: rgb(206 206 206);
-                                }
+
+#cover-text>h2 {
+    font-size: initial;
+    padding: 5% 1% 5% 1%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: rgb(206 206 206);
+}
 
 .logo-image {
     width: inherit;
